--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/react.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Demo</title>
+    <title>CSI BOX</title>
   </head>
   <body>
     <div id="root"></div>
